--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body {
   font-size: 16px;
   background-color: var(--white-bg);
   line-height: 1.5;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
 }
 h1,
 h2,
@@ -33,4 +33,8 @@ h6 {
 }
 ul {
   list-style-type: none;
+}
+.link {
+  text-decoration: none;
+  color: inherit;
 }
