--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,27 @@
 :root {
   --primary-brand-color: #4d5ae5;
-  --pressed-state-color: #404bbf;
+  --ocean-color: #404bbf;
 
   --primary-text-color: #434455;
-  --dark-color: #2e2f42;
+  --navyblue-color: #2e2f42;
   --subtle-text-color: #8e8f99;
 
-  --white-bg: #ffffff;
+  --white: #ffffff;
   --success-color: #31d0aa;
-  --accent-color: #e7e9fc;
-  --light-mode-color: #f4f4fd;
+  --cornflower-color: #e7e9fc;
+  --cloud-color: #f4f4fd;
 
   --modal-overlay-color: rgba(46, 47, 66, 0.4);
   --hero-bg-color: rgba(46, 47, 66, 0.7);
   --modal-bg-color: #fcfcfc;
 }
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: var(--primary-text-color);
   font-size: 16px;
-  background-color: var(--white-bg);
+  background-color: var(--white);
   line-height: 1.5;
-  letter-spacing: 0.02em;
+  letter-spacing: 2%;
 }
 h1,
 h2,
@@ -29,12 +29,122 @@ h3,
 h4,
 h5,
 h6 {
-  color: var(--dark-color);
+  color: var(--navyblue-color);
 }
 ul {
   list-style-type: none;
 }
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
 .link {
   text-decoration: none;
   color: inherit;
+}
+
+.logo {
+  font-size: 18px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 800;
+  line-height: 1.17;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+  color: var(--navyblue-color);
+}
+.logo span {
+  color: var(--primary-brand-color);
+}
+.footer-logo {
+  color: var(--cloud-color);
+}
+.header-nav .link {
+  color: var(--navyblue-color);
+  font-weight: 500;
+}
+.header-link:hover,
+.header-link:focus,
+.header-link:active,
+.team-contact-link:hover,
+.team-contact-link:focus,
+.team-contact-link:active {
+  color: var(--ocean-color);
+}
+
+.header-contacts .link {
+  font-style: normal;
+}
+.hero {
+  background-color: var(--navyblue-color);
+}
+.hero-title {
+  color: var(--white);
+  text-align: center;
+  font-size: 56px;
+  line-height: 1.07;
+}
+.button {
+  background: var(--primary-brand-color);
+
+  color: var(--white);
+  text-align: center;
+  font-weight: 500;
+  letter-spacing: 4%;
+}
+.hero-btn {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+.button:hover,
+.button:focus,
+.button:active {
+  background-color: var(--ocean-color);
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
+    0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+}
+.secondary-title {
+  text-align: center;
+  font-size: 36px;
+  line-height: 1.11;
+  text-transform: capitalize;
+}
+.subtitle {
+  font-size: 20px;
+  font-weight: 500;
+}
+.team {
+  background-color: var(--cloud-color);
+}
+.team-list-item {
+  background: var(--white);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  text-align: center;
+}
+.footer {
+  background-color: var(--navyblue-color);
+}
+.footer-text {
+  color: var(--cloud-color);
+}
+/* Portfolio page */
+.portfolio-filter-btn {
+  background: var(--cloud-color);
+  color: var(--primary-brand-color);
+  border: 1px solid var(--cornflower-color);
+}
+.portfolio-filter-btn:hover,
+.portfolio-filter-btn:focus,
+.portfolio-filter-btn:active {
+  color: var(--white);
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
+    0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
