--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,6 @@ body {
   font-size: 16px;
   background-color: var(--white);
   line-height: 1.5;
-  letter-spacing: 0.02em;
 }
 h1,
 h2,
@@ -35,18 +34,7 @@ h6 {
 .list {
   list-style: none;
 }
-/* .visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
-} */
+
 .link {
   text-decoration: none;
   color: inherit;
@@ -91,6 +79,7 @@ h6 {
   text-align: center;
   font-size: 56px;
   line-height: 1.07;
+  letter-spacing: 0.02em;
 }
 .button {
   background: var(--primary-brand-color);
@@ -101,35 +90,30 @@ h6 {
   line-height: 1.5;
   cursor: pointer;
 }
-/* .hero-btn {
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-} */
+
 .button:hover,
 .button:focus,
 .button:active {
   background-color: var(--ocean-color);
-  /* box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
-    0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1); */
 }
 .secondary-title {
   text-align: center;
   font-size: 36px;
   line-height: 1.11;
   text-transform: capitalize;
+  letter-spacing: 0.02em;
 }
 .subtitle {
   font-size: 20px;
   line-height: 1.2;
   font-weight: 500;
+  letter-spacing: 0.02em;
 }
 .team {
   background-color: var(--cloud-color);
 }
 .team-list-item {
-  background: var(--white);
-  /* box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08); */
+  background-color: var(--white);
   text-align: center;
 }
 .footer {
@@ -139,8 +123,11 @@ h6 {
   color: var(--cloud-color);
 }
 /* Portfolio page */
+.portfolio-title {
+  line-height: 1.5;
+}
 .portfolio-filter-btn {
-  background: var(--cloud-color);
+  background-color: var(--cloud-color);
   color: var(--primary-brand-color);
   /* border: 1px solid var(--cornflower-color); */
 }
