--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ body {
   font-size: 16px;
   background-color: var(--white);
   line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 h1,
 h2,
@@ -38,6 +39,7 @@ h6 {
 .link {
   text-decoration: none;
   color: inherit;
+  letter-spacing: 0.02em;
 }
 
 .logo {
